# aisp-mission-board

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  MIGRATION_TUTORIAL.md  README.md  app.Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  tw.Dockerfile
app/: log_config.yaml  main.py  migration_cli.py  migration_runner.py
app/configs/: __init__.py
app/migrations/: 20241207_120000_example_iterative_user_migration.py  20241207_120001_example_free_fall_mission_migration.py  __init__.py
app/models/: __init__.py  badge.py  mall.py  mission.py  record.py  system.py  user.py
app/pages/: admin_pages.bak.py  auth_pages.py  mall_pages.py  mission_pages.py  user_pages.py
app/pages/admin_pages/: __init__.py  index.py  mall.py  mission.py  review.py  user.py
app/public/assets/: app.js  style.css
app/shared/: __init__.py  dependencies.py  link_utils.py  logs.py  odm.py  sessions.py  time_funcs.py  types.py  webpage.py
app/templates/: base.html  exception.html  index.html  login.html
app/templates/admin/: admin_board.html  mission_form.html  mission_list.html  physical_product_requests.html  product_form.html  product_list.html  review_detail.html  review_list.html  user_detail.html  user_form.html  user_import.html  user_list.html
app/templates/mall/: mall_board.html  mall_detail.html  mall_physical_requests.html
app/templates/mission/: mission_board.html  mission_detail.html
app/templates/user/: change_password.html  user_bag.html  (+1 more)
env.d/: app.env.example  cf.env.example  me.env.example
tailwind_styles/: package.json
